Java 17 changes